update path swagger
